# idris-js

./: .gitignore  README.md  idris-js.cabal  prelude.js
src/: Main.hs
src/IRTS/: CodegenJS.hs
